swap images; adjust size and quality

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -3,7 +3,7 @@ layout: default
 title: 18F Consulting
 subtitle: Building a high-performing team of digital experts.
 permalink: /work/18f-consulting/
-image: /img/projects/18f_consulting/18f-consulting.jpg
+image: /img/projects/18f_consulting/18f-consulting.png
 image_description: The logo of 18F Consulting.
 feature_image: true
 order: 400
