--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -3,7 +3,7 @@ layout: default
 title: Agile Acquisition Framework
 subtitle: Aligning acquisition practices with agile delivery practices.
 permalink: /work/agile-acquisition-framework/
-image: /img/projects/agile_acquisition_framework/agile-acquisition-framework-venn-diagram.jpg
+image: /img/projects/agile_acquisition_framework/agile-acquisition-framework-venn-diagram.png
 image_description: An abstract image of a Venn diagram showing the intersection between acquisition and agile.
 feature_image: true
 order: 200
@@ -14,7 +14,7 @@ project_members:
   - robert-read
 technologies:
   - G Suite
-  - GitHub
+  - GitHub3
   - GitHub Pages
   - Jekyll
 practices:
