--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -3,7 +3,7 @@ layout: default
 title: Agile Delivery Services Marketplace
 subtitle: Streamlining the procurement of custom software solutions.
 permalink: /work/agile-delivery-services-marketplace/
-image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.jpg
+image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.png
 image_description: An abstract image representing a marketplace of agile vendors.
 feature_image: true
 order: 100
