--- a/_projects/opencompany.html
+++ b/_projects/opencompany.html
@@ -3,7 +3,7 @@ layout: default
 title: OpenCompany
 subtitle: Transforming how organizations operate openly and transparently.
 permalink: /work/opencompany/
-image: /img/projects/opencompany/opencompany.jpg
+image: /img/projects/opencompany/opencompany.png
 image_description: The logo of OpenCompany.
 feature_image: true
 order: 700
