--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -3,7 +3,7 @@ layout: default
 title: Cloud Adoption at the TSA
 subtitle: Jumpstarting a movement to the cloud.
 permalink: /work/tsa-cloud-adoption/
-image: /img/projects/tsa_cloud_adoption/tsa-cloud-adoption.jpg
+image: /img/projects/tsa_cloud_adoption/cloud-adoption.png
 image_description: An abstract image showing a car jumpstarter being used on a cloud.
 feature_image: true
 order: 600
