--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -3,7 +3,7 @@ layout: default
 title: Protosketching with the U.S. Navy
 subtitle: Facilitating decision-making through rapid prototyping.
 permalink: /work/us-navy-protosketching/
-image: /img/projects/us_navy_protosketching/protosketching.jpg
+image: /img/projects/us_navy_protosketching/protosketching.png
 image_description: An abstract image of a website being prototyped on a laptop.
 feature_image: true
 order: 900
