--- a/pages/join.html
+++ b/pages/join.html
@@ -385,7 +385,7 @@ permalink: /join/
         <ol>
           <li>
             You'll have a call with someone from Skylight to go over your conditional offer,
-            including salary. “Conditional” means it's contingent on meeting conditions
+            including salary. "Conditional" means it's contingent on meeting conditions
             specific to your position such as passing a government suitability and security review.
             If you accept the conditional offer, you'll move on to the next set of steps.
           </li>
@@ -394,7 +394,7 @@ permalink: /join/
             If a government suitability and security review is required by your position,
             you'll fill out a standard government form that covers all your employment,
             travel, residences, and other types of information for the past several years.
-            (For “contracting” positions with the federal government, the standard form is
+            (For "contracting" positions with the federal government, the standard form is
             either an SF-85 or SF-86.) You'll then complete a drug test. You must be able to
             pass through both the background investigation and drug test.
           </li>
@@ -411,10 +411,10 @@ permalink: /join/
         <h2>Security clearances</h2>
 
         <p>
-          Many of our “contracting” positions with government require some kind of
-          background check. Lower level clearances such as “public trust” are more
+          Many of our "contracting" positions with government require some kind of
+          background check. Lower level clearances such as "public trust" are more
           thorough than most private-sector background checks. Higher level clearances
-          such as “secret” are far more intensive by comparison. The background review
+          such as "secret" are far more intensive by comparison. The background review
           process adds some time and forms to the hiring process, but we'll guide you through it.
         </p>
 
