--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -3,7 +3,7 @@ layout: default
 title: TalkTo
 subtitle: Text questions to any business, and receive a response.
 permalink: /work/talkto/
-image: /img/projects/talkto/talkto.jpg
+image: /img/projects/talkto/talkto.png
 image_description: The logo of TalkTo.
 feature_image: true
 order: 800
