--- a/pages/about.html
+++ b/pages/about.html
@@ -60,7 +60,7 @@ permalink: /about/
             To maintain our HUBZone status, 35% of our employees must be located in
             <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps" target="_blank">
             one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
-            number of people must be concentrated in our “principal office” location, which is in
+            number of people must be concentrated in our "principal office" location, which is in
             Chapel Hill, North Carolina. The remaining percentage of people are free to live
             in whatever HUBZone locale they prefer. Depending on how people are distributed
             across HUBZones, what qualifies as the greatest concentration in Chapel Hill
