new hero unit image; some profile images; blog post edits; misc changes

--- a/_projects/adopta_agency.html
+++ b/_projects/adopta_agency.html
@@ -5,7 +5,8 @@ subtitle: Fostering a civic movement to improve government's open data.
 permalink: /work/adopta-agency/
 image: /img/projects/adopta-agency/adopta-agency.png
 image_description: An abstract image of a government building enclosed within API computing symbols.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 130
 tags: [digital services delivery, kin lane]
 excerpt: A civic movement to encourage people to "adopt" government's open datasets, and improve the way these datasets are shared with the public.
