--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -5,7 +5,8 @@ subtitle: Streamlining the procurement of custom software solutions.
 permalink: /work/agile-delivery-services-marketplace/
 image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.png
 image_description: An abstract image representing a marketplace of agile vendors.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 30
 tags: [digital procurement, chris cairns, robert read]
 excerpt: A federal-wide marketplace of pre-vetted software development vendors who practice agile the right way.
