--- a/_projects/energyos.html
+++ b/_projects/energyos.html
@@ -5,7 +5,8 @@ subtitle: Open source for our energy infrastructure.
 permalink: /work/energyos/
 image: /img/projects/energyos/smart-grid.png
 image_description: An abstract image of a smart grid.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 50
 tags: [digital services delivery, john teeter]
 excerpt: An open-source standard and developer community focused on advancing the interoperable exchange of energy usage data.
