--- a/_projects/maalka.html
+++ b/_projects/maalka.html
@@ -5,7 +5,8 @@ subtitle: Enabling efficient and sustainable energy usage.
 permalink: /work/maalka/
 image: /img/projects/maalka/maalka.png
 image_description: The logo of Maalka.
-feature_image: true
+feature_image: /img/projects/maalka/portfolio-energy-consumption-dashboard.jpg
+feature_image_description: Product screenshot of the portfolio energy consumption dashboard.
 order: 40
 tags: [digital services delivery, john teeter]
 excerpt: An mixed-source, digital platform for enabling the efficient and sustainable use of energy resources.
