--- a/_projects/opencompany.html
+++ b/_projects/opencompany.html
@@ -5,7 +5,8 @@ subtitle: Transforming how organizations operate openly and transparently.
 permalink: /work/opencompany/
 image: /img/projects/opencompany/opencompany.png
 image_description: The logo of OpenCompany.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 140
 tags: [digital services delivery, sean johnson]
 excerpt: An open-source, digital platform for organizations to drive new levels of alignment through radical openness and transparency.
