--- a/_projects/people_power.html
+++ b/_projects/people_power.html
@@ -5,7 +5,8 @@ subtitle: Intelligence at the edge.
 permalink: /work/people-power/
 image: /img/projects/people_power/internet-of-things.png
 image_description: An abstract image of a globe with connecting nodes representing the Internet of Things.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 160
 tags: [digital services delivery, john teeter]
 excerpt: An Internet of Things (IoT) solution platform that enables the automated acquisition of sensor data from connected devices and the delivery of intelligent services to residential and commercial customers.
