--- a/_projects/recreation_info_database_api.html
+++ b/_projects/recreation_info_database_api.html
@@ -5,7 +5,8 @@ subtitle: Sharing API expertise to improve a critical solicitation.
 permalink: /work/recreation-information-database-api/
 image: /img/projects/recreation-information-database-api/recreation-api.png
 image_description: An abstract image of a camping tent enclosed within API computing symbols.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 150
 tags: [digital procurement, microconsulting, kin lane]
 excerpt: Sharing expertise of APIs to improve a critical solicitation for the next generation of the Recreation Information Database.
