--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -5,7 +5,8 @@ subtitle: Text questions to any business, and receive a response.
 permalink: /work/talkto/
 image: /img/projects/talkto/talkto.png
 image_description: The logo of TalkTo.
-feature_image: true
+feature_image: /img/projects/talkto/talkto-demo-page.png
+feature_image_description: Product screenshot of a demo page of the messaging functionality.
 order: 10
 tags: [digital services delivery, sean johnson]
 excerpt: A digital messaging service that lets consumers text any business, and receive an immediate response.
@@ -40,6 +41,10 @@ news_posts:
     url: https://techcrunch.com/2011/09/13/talkto-allows-consumers-to-sms-any-local-business-and-get-a-quick-response/
   - title: TalkTo raises $3 million for app that lets you text questions to businesses
     url: http://archive.boston.com/business/technology/innoeco/2012/04/talkto_raises_3_million_for_ap.html
+  - title: 25 Standout Apps From 2012 (Mashable)
+    url: http://mashable.com/2012/12/03/apps-2012/#lSiclUoQeaqs
+  - title: 27 Genius New Products You Had No Idea Existed
+    url: https://www.buzzfeed.com/peggy/genius-new-products-you-had-no-idea-existed?utm_term=.ncZqOnZ2R#.iyZDPyQnA
   - title: Path Looks To Combine Commerce And Messaging With TalkTo Acquisition, Release Of New 'Talk' App
     url: https://techcrunch.com/2014/06/20/path-talk-talkto/
 project_url:
@@ -48,8 +53,10 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    TalkTo was a digital messaging service that let consumers text any business,
-    and receive an immediate response.
+    TalkTo was a popular digital messaging service that let consumers
+    text any business &mdash; such as a local grocery store or
+    government office &mdash; using their mobile or desktop device, and
+    receive a response within minutes.
   </p>
 {% endcapture %}
 
