--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -5,7 +5,8 @@ subtitle: Facilitating decision-making through rapid prototyping.
 permalink: /work/us-navy-protosketching/
 image: /img/projects/us_navy_protosketching/protosketching.png
 image_description: An abstract image of a website being prototyped on a laptop.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 90
 tags: [microconsulting, robert read]
 excerpt: Empowering the U.S. Navy to make critical design and technology decisions through a unique form of rapid prototyping.
