--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -5,7 +5,8 @@ subtitle: Building a high-performing team of digital experts.
 permalink: /work/18f-consulting/
 image: /img/projects/18f_consulting/18f-consulting.png
 image_description: The logo of 18F Consulting.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 110
 tags: [digital transformation, chris cairns, robert read]
 excerpt: A specialized team of digital experts within 18F focused on helping agencies achieve digital mastery.
