--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -5,7 +5,8 @@ subtitle: Aligning acquisition practices with agile delivery practices.
 permalink: /work/agile-acquisition-framework/
 image: /img/projects/agile_acquisition_framework/agile-acquisition-framework-venn-diagram.png
 image_description: An abstract image of a Venn diagram showing the intersection between acquisition and agile.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 20
 tags: [digital procurement, chris cairns, robert read]
 excerpt: A comprehensive framework for helping government program teams make the paradigm shift from decades-old acquisition practices based on waterfall to modern acquisition practices based on agile.
