--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -5,7 +5,8 @@ subtitle: Accelerating the adoption of digital acquisition practices.
 permalink: /work/digital-acquisition-accelerator/
 image: /img/projects/digital_acquisition_accelerator/speedometer.png
 image_description: An abstract image of a speedometer.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 120
 tags: [digital procurement, chris cairns]
 excerpt: A pilot program designed to accelerate the adoption of digital acquisition practices across government.
