--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -5,7 +5,8 @@ subtitle: Transforming agencies into digitally powered organizations.
 permalink: /work/digital-transformation-framework/
 image: /img/projects/digital_transformation_framework/digital-transformation-framework.png
 image_description: A diagram image showing various digital transformation dimensions.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 100
 tags: [digital transformation, chris cairns]
 excerpt: A comprehensive framework designed to help agencies transform into digitally-powered organizations.
