--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -5,7 +5,8 @@ subtitle: De-risking the complexities of modernizing an aging system.
 permalink: /work/dol-legacy-system-modernization/
 image: /img/projects/dol_legacy_system_modernization/old-mainframe-system.jpg
 image_description: Picture of an old mainframe system.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 70
 tags: [digital services delivery, robert read, chris cairns]
 excerpt: Using code forensics and modern API practices to dramatically de-risk the modernization of a legacy system at the Department of Labor.
