--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -5,7 +5,8 @@ subtitle: Advancing the turnaround of a troubled program in 3 days.
 permalink: /work/ssa-agile-microsprints/
 image: /img/projects/ssa_agile_microsprints/people-brainstorming-stickies.jpg
 image_description: Picture of people brainstorming with stickies on a whiteboard.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 80
 tags: [digital services delivery, microconsulting, robert read, chris cairns]
 excerpt: Contributing to the turnaround of a troubled system modernization program at the Social Security Administration through agile micro-sprints.
