--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -5,7 +5,8 @@ subtitle: Jumpstarting a movement to the cloud.
 permalink: /work/tsa-cloud-adoption/
 image: /img/projects/tsa_cloud_adoption/cloud-jumpstarter.png
 image_description: An abstract image showing a car jumpstarter being used on a cloud.
-feature_image: true
+feature_image:
+feature_image_description:
 order: 60
 tags: [digital transformation, chris cairns]
 excerpt: A jumpstart team for accelerating the Transformation Security Administration's transition to a cloud-based operating model.
