rework the landing page

--- a/_projects/opencompany.html
+++ b/_projects/opencompany.html
@@ -67,17 +67,10 @@ source_code_url: https://github.com/open-company
 {% endcapture %}
 
 {% capture results %}
-  <p>Thus far, notable results include:</p>
-
-  <ul>
-    <li>
-      Delivery of a minimum viable product
-    </li>
-
-    <li>
-      Validation of core hypotheses through extensive and iterative user testing
-    </li>
-  </ul>
+  <p>
+    Thus far, notable results include delivery of a minimum viable product
+    and validation of core hypotheses through extensive and iterative user testing.
+  </p>
 {% endcapture %}
 
 {% include project.html
