--- a/index.html
+++ b/index.html
@@ -30,95 +30,129 @@ title: Home
 
   <div class="landing-body">
 
-    <section class="landing-section-row">
-      <div class="landing-section-col">
-        <h2>Solving important problems</h2>
+    <section class="landing-content-row landing-content-row-margin">
+      <div class="landing-content-primary-col">
+        <h2>A new type of government consultancy</h2>
+      </div>
 
-        <img src="img/about-infographic.png" alt="An abstract image of a government building, encircled by icons that represent important government functions.">
-
+      <div class="landing-content-secondary-col">
         <p>
-          Every day millions of people &mdash; from veterans to immigrants &mdash;
-          depend on government services to fulfill their needs. But too often
-          these services are delivered using outmoded policies, practices,
-          and technologies, resulting in frustrating user experiences and
-          inefficient use of taxpayer dollars.
+          Digital to the core. Open by default. Empowered talent.
+          Public servants at heart. We're a new type of government
+          consultancy for the digital era.
         </p>
-
-        <p>
-          Our mission is to make government work in a digital world using design,
-          technology, and procurement.
-        </p>
-
-        <a href="/about/" role="button">About us</a>
       </div>
     </section>
 
-    <section class="landing-section-row">
-      <div class="landing-section-col">
-        <h2>Services designed for your success</h2>
+    <section class="landing-info-row">
+      <div class="landing-info-text-col">
+        <div class="landing-info-text">
+          <h3 class="header-display-5">Solving important problems</h3>
+          <p>
+            Every day millions of people &mdash; from veterans to immigrants &mdash;
+            depend on government services to fulfill their needs. But too often these
+            services are delivered using outmoded policies, practices, and technologies.
+            We're public servants at heart who are driven to make these services work
+            better in a digital world.
+          </p>
+        </div>
+      </div>
 
-        <img src="img/services-infographic.png" alt="An abstract image of a government building in a computer browser with a green checkmark, surrounded by icons that represent different service functions.">
-
-        <p>
-          To succeed in today's public-service environment, you need to think
-          and be digital. But getting there often requires fundamental practice,
-          culture, and technology change. And that means institutionalizing modern
-          disciplines such as human-centered design, lean-agile engineering, data science,
-          and modular contracting.
-        </p>
-
-        <p>
-          Our services are designed to <em>accelerate</em> your journey to becoming a
-          digital-first agency.
-        </p>
-
-        <a href="/services/" role="button">Our services</a>
+      <div class="landing-info-img-col">
+        <div class="landing-info-img">
+          <img src="img/about-infographic.png" alt="An abstract image of a government building, encircled by icons that represent important government functions.">
+        </div>
       </div>
     </section>
 
-    <section class="landing-section-row">
-      <div class="landing-section-col">
-        <h2>Experience to solve your toughest challenges</h2>
+    <section class="landing-info-row">
+      <div class="landing-info-text-col">
+        <div class="landing-info-text">
+          <h3 class="header-display-5">Services designed for your success</h3>
+          <p>
+            Thinking and being digital requires fundamental practice, culture,
+            and technology change. And that means institutionalizing modern
+            disciplines such as human-centered design and lean-agile engineering.
+            Everything we offer is designed to <em>accelerate</em> your journey
+            to becoming a digital-first agency.
+          </p>
+        </div>
+      </div>
 
-        <img src="img/experience-infographic.png" alt="An abstract image of a technology maze with an arrow representing how to navigate the complexity.">
-
-        <p>
-          From complex user interactions to entangled technologies to entrenched
-          institutional habits, these are just a few of the many challenges that
-          government must solve in order to deliver great public digital services.
-        </p>
-
-        <p>
-          Prior to Skylight, we founded and scaled 18F, built and sold technology
-          startups, created standards that power the internet, and saved the federal
-          government from hundreds of millions in unnecessary tech costs.
-        </p>
-
-        <p>
-          Our experience speaks volumes about what we can do for you.
-        </p>
-
-        <a href="/work/" role="button">Our work</a>
+      <div class="landing-info-img-col flex-lg-first">
+        <div class="landing-info-img">
+          <img src="img/services-infographic.png" alt="An abstract image of a government building in a computer browser with a green checkmark, surrounded by icons that represent different service functions.">
+        </div>
       </div>
     </section>
 
-    <section class="landing-section-row">
-      <div class="landing-section-col">
-        <h2>Strengthening your culture through ours</h2>
+    <section class="landing-info-row">
+      <div class="landing-info-text-col">
+        <div class="landing-info-text">
+          <h3 class="header-display-5">Experience to solve your toughest challenges</h3>
+          <p>
+            We founded and scaled 18F, built and sold technology startups,
+            created standards that power the internet, and more.
+            With our unique blend of government and commercial expertise,
+            you can rely on us to help solve your ageny's toughest digital challenges.
+          </p>
+        </div>
+      </div>
 
-        <img src="img/culture-infographic.png" alt="An abstract image of various government workers with gears and light bulbs in the background.">
+      <div class="landing-info-img-col">
+        <div class="landing-info-img">
+          <img src="img/experience-infographic.png" alt="An abstract image of a technology maze with an arrow representing how to navigate the complexity.">
+        </div>
+      </div>
+    </section>
 
+    <section class="landing-info-row">
+      <div class="landing-info-text-col">
+        <div class="landing-info-text">
+          <h3 class="header-display-5">Strengthening your culture through ours</h3>
+          <p>
+            Culture change is at the heart of achieving digital mastery.
+            From open-sourcing our assets to hiring first-rate digital talent
+            to treating every interaction as a teaching opportunity,
+            our culture is designed to empower you to succeed in the digital age.
+          </p>
+        </div>
+      </div>
+
+      <div class="landing-info-img-col flex-lg-first">
+        <div class="landing-info-img">
+          <img src="img/culture-infographic.png" alt="An abstract image of various government workers with gears and light bulbs in the background.">
+        </div>
+      </div>
+    </section>
+
+    <section class="landing-content-row">
+      <div class="landing-content-primary-col">
+        <h2>Let's deliver something great</h2>
+      </div>
+
+      <div class="landing-content-secondary-col">
         <p>
-          Culture change is at the heart of achieving digital mastery.
+          Succeeding in today's digital age requires engaging with
+          teams who truly understand digital within the context of government.
+          We're designed from the bottom-up to help you achieve digital mastery.
         </p>
+      </div>
 
-        <p>
-          From open-sourcing our knowledge to hiring first-rate digital talent
-          to treating every interaction as a teaching opportunity,
-          our culture is designed to empower you to succeed in a digital world.
-        </p>
+      <div class="landing-content-ctas-col">
+        <div class="landing-content-cta-wrapper">
+          <a href="/services/" role="button">
+            <span>Learn what we offer</span>
+            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+          </a>
+        </div>
 
-        <a href="/culture/" role="button">Our culture</a>
+        <div class="landing-content-cta-wrapper">
+          <a href="/work/" role="button">
+            <span>View our work</span>
+            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+          </a>
+        </div>
       </div>
     </section>
 
