--- a/index.html
+++ b/index.html
@@ -141,17 +141,11 @@ title: Home
 
       <div class="landing-content-ctas-col">
         <div class="landing-content-cta-wrapper">
-          <a href="/services/" role="button">
-            <span>Learn what we offer</span>
-            <i class="fa fa-arrow-right" aria-hidden="true"></i>
-          </a>
+          <a href="/services/" role="button">Learn what we offer</a>
         </div>
 
         <div class="landing-content-cta-wrapper">
-          <a href="/work/" role="button">
-            <span>View our work</span>
-            <i class="fa fa-arrow-right" aria-hidden="true"></i>
-          </a>
+          <a href="/work/" role="button">View our work</a>
         </div>
       </div>
     </section>
