update quote; wire-up form submission

--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -23,7 +23,9 @@ permalink: /alliances/
 
   <div class="alliances-row">
     <div class="alliances-contact-col">
-      <form>
+      <form accept-charset="UTF-8" action="https://formkeep.com/f/617ceafab713" method="POST">
+        <input type="hidden" name="utf8" value="✓">
+
         <div class="form-group">
           <label class="required" for="name-input">Name</label>
           <input id="name-input" class="form-control" type="text" placeholder="Julie Styles" name="name" autocomplete="name" required>
