--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -24,7 +24,9 @@ permalink: /hire-us/
 
   <div class="hire-row">
     <div class="hire-contact-col">
-      <form>
+      <form accept-charset="UTF-8" action="https://formkeep.com/f/4309c7290974" method="POST">
+        <input type="hidden" name="utf8" value="✓">
+
         <div class="form-group">
           <label class="required" for="name-input">Name</label>
           <input id="name-input" class="form-control" type="text" placeholder="Julie Styles" name="name" autocomplete="name" required>
