--- a/pages/join.html
+++ b/pages/join.html
@@ -20,7 +20,9 @@ permalink: /join/
           to bring out the best in each other.
         </p>
 
-        <form>
+        <form accept-charset="UTF-8" action="https://formkeep.com/f/24550e06a886" method="POST">
+          <input type="hidden" name="utf8" value="✓">
+
           <fieldset class="form-group">
             <legend>Contact information</legend>
 
