add new team members announcement blog post

--- a/pages/about.html
+++ b/pages/about.html
@@ -62,9 +62,7 @@ permalink: /about/
             one of the nearly 20,000 HUBZone areas across the country</a>. Of that 35%, the greatest
             number of people must be concentrated in our "principal office" location, which is in
             Chapel Hill, North Carolina. The remaining percentage of people are free to live
-            in whatever HUBZone locale they prefer. Depending on how people are distributed
-            across HUBZones, what qualifies as the greatest concentration in Chapel Hill
-            could be a majority or plurality.
+            in whatever HUBZone locale they prefer.
           </p>
         </div>
       </div>
