case study excerpt edit

--- a/_projects/people_power.html
+++ b/_projects/people_power.html
@@ -9,7 +9,7 @@ feature_image:
 feature_image_description:
 order: 160
 tags: [digital services delivery, john teeter]
-excerpt: An Internet of Things (IoT) solution platform that enables the automated acquisition of sensor data from connected devices and the delivery of intelligent services to residential and commercial customers.
+excerpt: An Internet of Things solution platform that enables the automated acquisition of sensor data from connected devices and the delivery of intelligent services to residential and commercial customers.
 project_members:
   - john-teeter
 technologies:
