--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -48,7 +48,7 @@ permalink: /alliances/
 
         <div class="form-group">
           <label class="required" for="help-input">How can we work together?</label>
-          <textarea id="help-input" class="form-control" rows="3" placeholder="Let's team on an exciting project opportunity..." required></textarea>
+          <textarea id="help-input" class="form-control" rows="3" placeholder="Let's team on an exciting project opportunity..." name="oppty" required></textarea>
         </div>
 
         <div class="form-group">
