--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -49,7 +49,7 @@ permalink: /hire-us/
 
         <div class="form-group">
           <label class="required" for="help-input">How can we be of service?</label>
-          <textarea id="help-input" class="form-control" rows="3" placeholder="I need help modernizing an old system..." required></textarea>
+          <textarea id="help-input" class="form-control" rows="3" placeholder="I need help modernizing an old system..." name="need" required></textarea>
         </div>
 
         <div class="form-group">
