typo: polanguage -> language

--- a/pages/policies.html
+++ b/pages/policies.html
@@ -14,7 +14,7 @@ permalink: /policies/
     <div class="text-lead-col">
       <p>
         Our policies govern how we interact with you and our fellow colleagues.
-        We've written them to be as plain polanguage as possible so humans
+        We've written them to be as plain language as possible so humans
         (not just lawyers) can actually understand them.
       </p>
     </div>
