case study edit

--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -75,7 +75,7 @@ source_code_url:
     The framework's design uniquely combines proven practices from multiple disciplines
     &mdash; such as user-centered design, lean startup, agile development, agile project
     management, evolutionary architecture, open source, performance-based contracting,
-    and modular contracting &mdash; into a unified, step-by-step approach.
+    and modular contracting &mdash; into a unified approach.
   </p>
 
   <p>
