add pd blog post; style and copy changes

--- a/pages/services.html
+++ b/pages/services.html
@@ -70,7 +70,7 @@ permalink: /services/
         {% assign capability_groups = site.data.capability_groups | sort: 'order' %}
         {% for capability_group in capability_groups %}
           <div class="capability-group-col">
-            <div aria-hidden="true"></div>
+            <div class="divider-line" aria-hidden="true"></div>
             <h3>{{capability_group.name}}</h3>
             <ul>
               {% for capabilitiy in capability_group.capabilities %}
@@ -91,38 +91,38 @@ permalink: /services/
     <div class="industry-info-list">
       <div class="industry-info-list-row">
         <div class="industry-info-item-col">
-          <div aria-hidden="true"></div>
+          <div class="divider-line" aria-hidden="true"></div>
           <h3>Legal Name</h3>
           <p>Skylight Digital LLC</p>
         </div>
 
         <div class="industry-info-item-col">
-          <div aria-hidden="true"></div>
+          <div class="divider-line" aria-hidden="true"></div>
           <h3><abbr title="Data Universal Numbering System">DUNS</abbr> #</h3>
           <p>080202677</p>
         </div>
 
         <div class="industry-info-item-col">
-          <div aria-hidden="true"></div>
+          <div class="divider-line" aria-hidden="true"></div>
           <h3><abbr title="Commercial and Government Entity">CAGE</abbr> Code</h3>
           <p>7QNG6</p>
         </div>
 
         <div class="industry-info-item-col">
-          <div aria-hidden="true"></div>
+          <div class="divider-line" aria-hidden="true"></div>
           <h3><abbr title=" Historically Underutilized Business Zone">HUBZone</abbr> Certification #</h3>
           <p>56905</p>
         </div>
 
         <div class="industry-info-item-col">
-          <div aria-hidden="true"></div>
+          <div class="divider-line" aria-hidden="true"></div>
           <h3><abbr title="Standard Industrial Classification">SIC</abbr> Codes</h3>
           <p><abbr title="Management Consulting Services">8742</abbr></p>
           <p><abbr title="Computer Programming Services">7371</abbr></p>
         </div>
 
         <div class="industry-info-item-col">
-          <div aria-hidden="true"></div>
+          <div class="divider-line" aria-hidden="true"></div>
           <h3><abbr title="North American Industry Classification System">NAICS</abbr> Codes</h3>
           <p><abbr title="Administrative Management and General Management Consulting">541611</abbr></p>
           <p><abbr title="Custom Computer Programming Services">541511</abbr></p>
