--- a/_projects/maalka.html
+++ b/_projects/maalka.html
@@ -9,7 +9,7 @@ feature_image: /img/projects/maalka/portfolio-energy-consumption-dashboard.jpg
 feature_image_description: Product screenshot of the portfolio energy consumption dashboard.
 order: 40
 tags: [digital services delivery, john teeter]
-excerpt: An mixed-source, digital platform for enabling the efficient and sustainable use of energy resources.
+excerpt: A mixed-source, digital platform for enabling the efficient and sustainable use of energy resources.
 project_members:
   - john-teeter
 technologies:
@@ -46,7 +46,7 @@ source_code_url: https://github.com/Maalka
 
 {% capture summary %}
   <p>
-    Maalka is an mixed-source, digital platform designed to enable
+    Maalka is a mixed-source, digital platform designed to enable
     energy resource managers such as building owners and local governments
     achieve efficient and sustainable utilization of energy resources.
   </p>
