--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ title: Home
             We founded and scaled 18F, built and sold technology startups,
             created standards that power the internet, and more.
             With our unique blend of government and commercial expertise,
-            you can rely on us to help solve your ageny's toughest digital challenges.
+            you can rely on us to help solve your agency's toughest digital challenges.
           </p>
         </div>
       </div>
