update pay & benefit offerings

--- a/pages/join.html
+++ b/pages/join.html
@@ -441,6 +441,14 @@ permalink: /join/
           </li>
 
           <li>
+            Company-subsidized health and dental insurance
+          </li>
+
+          <li>
+            401k plan
+          </li>
+
+          <li>
             Unlimited paid time off policy
           </li>
 
