update pay & benefit offerings

--- a/pages/join.html
+++ b/pages/join.html
@@ -458,6 +458,10 @@ permalink: /join/
           </li>
 
           <li>
+            An environment that empowers you to unleash your superpowers for public good
+          </li>
+
+          <li>
             Potential relocation assistance
           </li>
 
