--- a/pages/join.html
+++ b/pages/join.html
@@ -9,8 +9,8 @@ permalink: /join/
   <div class="row">
 
     <section class="join-content-col">
-      <div id="application">
-        <h2>Apply now</h2>
+      <div id="join">
+        <h2>Join the team</h2>
 
         <p>
           We're looking for great people in the fields of engineering, data science,
@@ -20,169 +20,7 @@ permalink: /join/
           to bring out the best in each other.
         </p>
 
-        <form accept-charset="UTF-8" action="https://formkeep.com/f/24550e06a886" method="POST">
-          <input type="hidden" name="utf8" value="✓">
-
-          <fieldset class="form-group">
-            <legend>Contact information</legend>
-
-            <div class="form-group">
-              <label class="required" for="name-input">Name</label>
-              <input id="name-input" class="form-control" type="text" placeholder="Olivia Jones" name="name" autocomplete="name" required>
-            </div>
-
-            <div class="form-group">
-              <label class="required" for="email-input">Email</label>
-              <input id="email-input" class="form-control" type="email" placeholder="olivia@jones.com" name="email" autocomplete="email" required>
-            </div>
-
-            <div class="form-group">
-              <label class="required" for="zip-input">Zip code</label>
-              <input id="zip-input" class="form-control" type="text" pattern="[0-9]{5}" title="Five-digit zip code" placeholder="55555" name="zip" autocomplete="postal-code" aria-describedby="zip-help" required>
-              <small id="zip-help" class="form-text text-muted">
-                This helps us identify if you live in a <a href="/join/#who-where" target="_blank">HUBZone</a>.
-              </small>
-            </div>
-          </fieldset>
-
-          <fieldset class="form-group">
-            <legend>Experience</legend>
-
-            <div class="form-group">
-              <label class="required" for="expertise-select">What is your primary field of expertise?</label>
-              <select id="expertise-select" class="form-control" name="expertise" required>
-                <option disabled selected>-select-</option>
-                <option>Software engineering</option>
-                <option>Frontend web development</option>
-                <option>Legacy software reengineering</option>
-                <option>DevOps and site reliability engineering</option>
-                <option>Security engineering</option>
-                <option>Engineering management</option>
-                <option>Data engineering</option>
-                <option>Data science</option>
-                <option>Data analytics</option>
-                <option>Internet of things</option>
-                <option>Product management</option>
-                <option>Product design</option>
-                <option>Service design</option>
-                <option>User experience design</option>
-                <option>Visual design</option>
-                <option>Content design</option>
-                <option>Technology procurement</option>
-                <option>Technical recruiting and talent operations</option>
-                <option>Enterprise agile transformation</option>
-                <option>Client engagement management</option>
-                <option>Other</option>
-              </select>
-            </div>
-
-            <div class="form-group">
-              <label class="required" for="about-input">Tell us about yourself...</label>
-              <textarea id="about-input" class="form-control" rows="3" placeholder="I have 3 years of software engineering experience..." name="about" required></textarea>
-            </div>
-
-            <div class="form-check">
-              <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" name="internship">
-                Are you applying for an internship?
-              </label>
-            </div>
-
-            <fieldset class="fieldset-nested">
-              <legend>
-                Where can we find you online?
-                <small>(select those that apply)</small>
-              </legend>
-
-              <div class="form-icons">
-                <div role="button" data-toggle="github-toggle" aria-controls="github-toggle" aria-expanded="false">
-                  <span class="sr-only">Toggle GitHub Form Input Field</span>
-                  <i class="fa fa-github fa-2x" title="GitHub" aria-hidden="true"></i>
-                </div>
-
-                <div role="button" data-toggle="linkedin-toggle" aria-controls="linkedin-toggle" aria-expanded="false">
-                  <span class="sr-only">Toggle LinkedIn Form Input Field</span>
-                  <i class="fa fa-linkedin fa-2x" title="LinkedIn" aria-hidden="true"></i>
-                </div>
-
-                <div role="button" data-toggle="medium-toggle" aria-controls="medium-toggle" aria-expanded="false">
-                  <span class="sr-only">Toggle Medium Form Input Field</span>
-                  <i class="fa fa-medium fa-2x" title="Medium" aria-hidden="true"></i>
-                </div>
-
-                <div role="button" data-toggle="dribbble-toggle" aria-controls="dribbble-toggle" aria-expanded="false">
-                  <span class="sr-only">Toggle Dribbble Form Input Field</span>
-                  <i class="fa fa-dribbble fa-2x" title="Dribbble" aria-hidden="true"></i>
-                </div>
-
-                <div role="button" data-toggle="website-toggle" aria-controls="website-toggle" aria-expanded="false">
-                  <span class="sr-only">Toggle Personal Website Form Input Field</span>
-                  <i class="fa fa-home fa-2x" title="Personal Website" aria-hidden="true"></i>
-                </div>
-              </div>
-
-              <div id="github-toggle" class="form-group sr-only">
-                <label for="github-input">GitHub</label>
-                <input id="github-input" class="form-control" type="text" placeholder="https://github.com/oliviajones" name="github">
-              </div>
-
-              <div id="linkedin-toggle" class="form-group sr-only">
-                <label for="linkedin-input">LinkedIn</label>
-                <input id="linkedin-input" class="form-control" type="text" placeholder="https://linkedin.com/in/oliviajones" name="linkedin">
-              </div>
-
-              <div id="medium-toggle" class="form-group sr-only">
-                <label for="medium-input">Medium</label>
-                <input id="medium-input" class="form-control" type="text" placeholder="https://medium.com/@oliviajones" name="medium">
-              </div>
-
-              <div id="dribbble-toggle" class="form-group sr-only">
-                <label for="dribbble-input">Dribbble</label>
-                <input id="dribbble-input" class="form-control" type="text" placeholder="https://dribbble.com/oliviajones" name="dribble">
-              </div>
-
-              <div id="website-toggle" class="form-group sr-only">
-                <label for="website-input">Personal website</label>
-                <input id="website-input" class="form-control" type="text" placeholder="https://oliviajones.me/" name="website">
-              </div>
-            </fieldset>
-          </fieldset>
-
-          <fieldset class="form-group">
-            <legend>Other information</legend>
-
-            <div class="form-group">
-              <label for="authorization-select" aria-describedby="authorization-help">Are you authorized to work in the U.S.?</label>
-              <select id="authorization-select" class="form-control" name="authorization">
-                <option disabled selected>-select-</option>
-                <option>Yes, I'm a U.S. citizen.</option>
-                <option>Yes, I'm authorized to work in the U.S., though I'm not a citizen.</option>
-                <option>No.</option>
-                <option>I don't know.</option>
-              </select>
-              <small id="authorization-help" class="form-text text-muted">
-                All positions require work authorization.
-              </small>
-            </div>
-
-            <div class="form-group">
-              <label for="hear-select">How did you hear about Skylight?</label>
-              <select id="hear-select" class="form-control" name="hear">
-                <option disabled selected>-select-</option>
-                <option>A current/former Skylight team member</option>
-                <option>An article, video, or blog post</option>
-                <option>Twitter</option>
-                <option>A friend or colleague</option>
-                <option>An event</option>
-                <option>Other</option>
-              </select>
-            </div>
-          </fieldset>
-
-          <div class="form-group">
-            <button type="submit">Submit</button>
-          </div>
-        </form>
+        {% include open_positions.html %}
       </div>
 
       <div id="who">
@@ -209,7 +47,7 @@ permalink: /join/
           <li>Software engineering</li>
           <li>Frontend web development</li>
           <li>Legacy software reengineering</li>
-          <li>DevOps and site reliability engineeringv
+          <li>DevOps and site reliability engineering</li>
           <li>Security engineering</li>
           <li>Engineering management</li>
           <li>Data engineering</li>
@@ -230,7 +68,7 @@ permalink: /join/
 
         <p>
           This is not an exhaustive list, but it does represent the most common skills
-          that we seek. Don't see what you do on this list? <a href="/join/#application">Apply anyway!</a>
+          that we seek. Don't see what you do on this list? <a href="/join/#application">Apply anyway</a>!
         </p>
 
         <h2>Who is eligible to work with us</h2>
@@ -306,16 +144,6 @@ permalink: /join/
         </p>
       </div>
 
-      <div id="openings">
-        <h2>Open positions</h2>
-
-        <p>
-          We don't have any open positions at the moment, but be sure to check back regularly.
-          If you'd like to express your interest in future career opportunities with us,
-          <a href="/join/#application">we encourage you to apply anyway</a>.
-        </p>
-      </div>
-
       <div id="interviewing">
         <h2>Interview process</h2>
 
@@ -326,9 +154,9 @@ permalink: /join/
         <h2>Application review</h2>
 
         <p>
-          Within five days after you <a href="/join/#application">submit your application</a>,
+          Within five days after you submit your application,
           we'll evaluate your information against the qualifications of
-          our <a href="/join/#openings">open positions</a> and communicate next steps.
+          our <a href="/join/#join">open positions</a> and communicate next steps.
           If you look like a potential match, we'll begin the live interview process.
         </p>
 
@@ -550,18 +378,29 @@ permalink: /join/
           Duke, or NC State to apply.
         </p>
       </div>
+
+      <div id="application">
+        <h2>Submit your info</h2>
+
+        <p>
+          If you don't see an <a href="/join/#join">open position</a> that fits you, or we're not currently advertising
+          any openings, we'd love for you to apply anyway!
+        </p>
+
+        {% include apply_form.html %}
+      </div>
     </section>
 
     <aside class="subnav-col">
       <nav>
         <ul role="presentation">
-          <li class="current"><a href="/join/#application" aria-current="location">Apply now</a></li>
+          <li class="current"><a href="/join/#join" aria-current="location">Join the team</a></li>
           <li><a href="/join/#who">Who we're hiring</a></li>
-          <li><a href="/join/#openings">Open positions</a></li>
           <li><a href="/join/#interviewing">Interview process</a></li>
           <li><a href="/join/#benefits">Pay &amp; benefits</a></li>
           <li><a href="/join/#relocation">Relocation</a></li>
           <li><a href="/join/#internships">Internships</a></li>
+          <li><a href="/join/#application">Submit your info</a></li>
         </ul>
       </nav>
     </aside>
