add link to case study

--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -92,9 +92,9 @@ source_code_url:
     </li>
 
     <li>
-      A robust contractual clause that, by default, requires all vendors to
-      agree to commit all data, source code, and documentation produced for the
-      government to the public domain
+      A <a href="https://skylight.digital/blog/public-domain-procurement/">robust contractual clause</a>
+      that, by default, requires all vendors to agree to commit all data,
+      source code, and documentation produced for the government to the public domain
     </li>
 
     <li>
