edit copy of adsm case study

--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -118,7 +118,7 @@ source_code_url:
     </li>
 
     <li>
-      Evaluated all proposals within 4 weeks
+      Completed technical evaluation of all proposals within weeks by only 3 people
     </li>
 
     <li>
